tdf#103060 Format "GGG" as gengou by default in Japanese locale

as well as "G" and "GG", as Excel does.

Change-Id: Iad68f6a9548b7229930c0e0c518fdb29bfaa026f